# master-tfm

./: .gitignore  Makefile  README.MD  initialize.cmd  initialize.ps1  initialize.py  initialize.sh  pyproject.toml  requirements-dev.txt  requirements.txt
src/Python_Script/: procesado_datos.py
src/notebooks/: ARIMA.ipynb
src/notebooks/Data_processing/: Data_processing.ipynb  processed_data_0.csv  processed_data_final.csv
src/notebooks/XGBoost Model/: XGBoost_Model.ipynb  processed_data_0.csv
src/notebooks/arima_model/: arima_model.ipynb  arima_model.py
src/notebooks/cnn_model/: cnn_model.ipynb  cnn_model.py
src/notebooks/lstm_model/: lstm.ipynb
src/notebooks/sarimax_model/: sarimax_model.ipynb  sarimax_model.py
src/utils/: conclusion_metrics.py  load_dataframe.py  plotting.py
